--- a/html/main_data.html
+++ b/html/main_data.html
@@ -224,7 +224,7 @@
                 </div>
             </div>
         </div>
-         <table class="logged-in table table-bordered d-none" id="myTable">
+         <table class="logged-in table table-bordered d-none w-auto" id="myTable">
            <thead>
                 <tr>
                     <th scope="col">Time</th>
@@ -233,8 +233,8 @@
                     <th scope="col">ETA</th>
                     <th scope="col">ETD</th>
                     <th scope="col">OCC</th>
-                    <th class="col-3" scope="col">Defect</th>
-                    <th class="col-3" scope="col">Notes</th>
+                    <th class="col-5" scope="col">Defect</th>
+                    <th class="col-4" scope="col">Notes</th>
                     <th class="text-nowrap" scope="col">S / L</th>
                     <th scope="col">RESET</th>
                     <th class="text-nowrap" scope="col">O K</th>
